--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "~49.0.15",
-    "expo-file-system": "~15.4.5",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^51.0.14",
+    "expo-file-system": "~17.0.1",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.72.10",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native": "0.74.2",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.11.4",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
