--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/material-top-tabs": "^6.6.5",
@@ -17,18 +18,24 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "^51.0.14",
-    "expo-file-system": "~17.0.1",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-gesture-handler": "~2.16.1",
+    "@shopify/react-native-skia": "^1.5.0",
+    "expo": "^52.0.7",
+    "expo-file-system": "~18.0.3",
+    "expo-status-bar": "~2.0.0",
+    "react": "^18.2.0",
+    "react-native": "0.76.2",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.20.0",
+    "react-native-graph": "^1.1.0",
+    "react-native-pager-view": "6.4.1",
     "react-native-paper": "^5.11.4",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-navigation": "^5.0.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-svg": "^13.14.0",
+    "react-navigation": "^5.0.0",
+    "victory-native": "^36.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
